# truckDetection

./: .gitignore  CMakeLists.txt  README.md  truckDet.cpp  truckDet.service
